--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,57 @@
 *{
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0;
+  padding: 0;
 }
-body{
-  padding: 60px;
+body {
+  padding: 60px !important;
 }
 
-input{
-  width: 100%;
-  font-size: 1.2rem;
+h1{
+    text-align: center;
+
+}
+h2{
+  text-align: center;
+}
+
+input {
   color: grey;
+  font-size: 1.4rem;
+  width: 100%;
+  border-radius: 12px;
+  border-width: 5px;
 }
 
-.card-grid{
+.card-grid {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-left: 1.5rem;
 }
 
 .card{
   align-content: center;
-  border: 1px solid gray;
-  border-radius: 6px;
-  overflow: hidden;
   margin-bottom: 10px;
   margin-right: 10px;
-}
-
-.card p{
-  padding: 5px;
-  text-align: center;
+  overflow: hidden;
 }
 
 .card img{
   max-height: 170px;
+}
+
+@media (max-width: 420px) {
+  .cardd {
+    width: 7.2rem !important;
+    height: 8rem !important;
+  }
+  .pic{
+    width: 100%;
+    height: 100%
+  }
+  .hidden-mobile {
+    display: none;
+  }
 }
 
