--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
   padding: 0;
+  
 }
 body {
   padding: 60px !important;
+  background-color: #eee2dc !important;
 }
 
 h1{
@@ -16,11 +18,12 @@ h2{
 }
 
 input {
-  color: grey;
   font-size: 1.4rem;
   width: 100%;
   border-radius: 12px;
   border-width: 5px;
+    background-color: #fff0f2 !important;
+
 }
 
 .card-grid {
@@ -35,6 +38,7 @@ input {
   margin-bottom: 10px;
   margin-right: 10px;
   overflow: hidden;
+  border-width: 50px;
 }
 
 .card img{
