--- a/src/index.css
+++ b/src/index.css
@@ -41,18 +41,14 @@ input {
   border-width: 50px;
 }
 
-.card img{
-  max-height: 170px;
-}
-
 @media (max-width: 420px) {
   .cardd {
-    width: 7.2rem !important;
+    width: 60rem !important;
     height: 8rem !important;
   }
   .pic{
-    width: 100%;
-    height: 100%
+    width: 100% !important;
+    height: 100% !important;
   }
   .hidden-mobile {
     display: none;
