--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,9 @@ input {
 
 .card{
   align-content: center;
-  margin-bottom: 10px;
-  margin-right: 10px;
   overflow: hidden;
-  border-width: 50px;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
 }
 
 @media (max-width: 420px) {
